--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <footer>
         <div class="footer-container">
-            <a href="https://www.ligaprofesional.ar/clubes"  target="_blank"><u>Clubes liga profecional</u></a>
+            <a href="https://www.ligaprofesional.ar/clubes"  target="_blank"><u>Lista de clubes liga profecional</u></a>
         </div>
     </footer>
 
